# AgenteOracle

./: .env.example  .gitignore  README.md  consultas.sql  consultas_postgres.sql  pyproject.toml
frontend/grupoConceitoMCP/: README.md  angular.json  package-lock.json  package.json
frontend/grupoConceitoMCP/public/fontawesome/css/: all.min.css
frontend/grupoConceitoMCP/src/: index.html  styles.scss
frontend/grupoConceitoMCP/src/app/: app-config.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/grupoConceitoMCP/src/app/dadosRelatorios/: modulos-financeiro.ts  relatorio-layouts.ts  views-financeiras.ts
frontend/grupoConceitoMCP/src/app/layout/: layout.html  layout.scss  layout.ts
frontend/grupoConceitoMCP/src/app/servicos/: admin.guard.ts  auth.guard.ts  auth.interceptor.ts  formatar-sql.ts  iniciais.ts  sessao.ts
src/agente_oracle/: config.py  relatorios.py
src/agente_oracle/agent/: cli.py  core.py
src/agente_oracle/agent/financeiro/: financeiro.py  prompt.py  schema.py
src/agente_oracle/db/: connection.py  mongo.py
src/agente_oracle/server/: app.py  cors.py  server.py
src/agente_oracle/server/auth/: __init__.py  dependencia.py  rotas.py
src/agente_oracle/server/financeiro/: __init__.py  filiais.py  historico.py  ia.py  layouts.py  relatorios.py
src/agente_oracle/tools/: connectivity.py  consulta_livre.py  financeiro.py  historico.py
src/agente_oracle/tools/auth/: cli.py  papeis.py  token.py  usuarios.py
src/agente_oracle/tools/financeiro/: consulta_livre.py  historico.py  layouts.py
(+98 files in other folders)
