[project]
name = "agente-oracle"
version = "0.1.0"
description = "Servidor MCP para integração com Oracle - emissão de relatórios e automações internas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "oracledb>=2.4.0",
    "ollama>=0.4.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.0",
    "pymongo>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
agente-oracle = "agente_oracle.server.server:main"
agente-oracle-chat = "agente_oracle.agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
